--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resume.css">
     <script src="https://kit.fontawesome.com/2d6a136af3.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="pic/favicon_io/android-chrome-512x512.png">
     <title>Jatura's Resume</title>
 </head>
 
