--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <section>
                         <h3>Technological Skills</h3>
                         <ul>
-                            <li>Basic in HTML, CSS, and Python</li>
+                            <li>Basic in HTML, CSS, JavaScript and Python</li>
                             <li>Proficient in C, C++, and MATLAB</li>
                             <li>Microsoft Office, Visual Studio code, ArduinoIDE, Notepad++, GitKraKen, SOLIDWORKS, Proteus, and Altium</li>
                         </ul>
